packages/typ/tests/fixtures/diagnostics/0328_fun_polymorphic_record_field_mismatch_09.ml.expected
File "0328_fun_polymorphic_record_field_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0328_fun_polymorphic_record_field_mismatch_09 is not a valid module name.

File "0328_fun_polymorphic_record_field_mismatch_09.ml", line 2, characters 40-50:
2 | let bad_iota : poly_iota = { run_iota = fun _ -> 8 }
                                            ^^^^^^^^^^
Error: This field value has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
